--- a/to-do-app/src/ToDoApp.css
+++ b/to-do-app/src/ToDoApp.css
@@ -104,6 +104,7 @@
   min-width: 296px;
   max-width: 780px;
   border-radius: 12px;
+  font-family: inherit;
   font-size: calc(15px + 2vmin);
 }
 
