--- a/to-do-app/src/components/ListTitles/style.css
+++ b/to-do-app/src/components/ListTitles/style.css
@@ -1,7 +1,7 @@
 .list-titles {
   position: absolute;
   height: 33px;
-  left: 197px;
+  left: 165px;
   top: 353px;
   font-weight: normal;
   font-size: 28px;
@@ -19,8 +19,8 @@ ul {
   list-style-type: none;
 }
 
-ul li {
-  padding-left: 0.5em;
+ul {
+  padding-inline-start: 0;
 }
 
 li img {
@@ -32,4 +32,8 @@ li img {
   transform: scale(0.8);
   stroke: #FFFFFF;
   stroke-width: 2;
+}
+
+li:active {
+  font-weight: 800;
 }
