--- a/to-do-app/src/ToDoApp.css
+++ b/to-do-app/src/ToDoApp.css
@@ -1,5 +1,6 @@
 .Action-Button{
-  height: 53%;
+  height: 18px;
+  margin-left: 20px;
 }
 
 .Action-Input{
@@ -49,13 +50,9 @@
 }
 
 .List-Item-Container{
-  background-color: #E9F6FC;
-  border-radius: 10px;
-  margin-bottom: 1px;
   height: 10%;
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
 }
 
 .Logo-Container{
