--- a/to-do-app/src/components/ListView/style.css
+++ b/to-do-app/src/components/ListView/style.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,100&display=swap');
 
 .active-list-header {
-  position: absolute;
   margin-top: 46px;
+  margin-bottom: 46px;
   margin-left: 38px;
   width: 183px;
   font-family: 'Roboto', sans-serif;
@@ -11,7 +11,6 @@
   font-size: 24px;
   line-height: 28px;
   letter-spacing: 0.01em;
-
   color: #3F51B5;
 }
 
