--- a/to-do-app/src/components/ListItem/style.css
+++ b/to-do-app/src/components/ListItem/style.css
@@ -1,24 +1,17 @@
-.item-list {
+.item {
   display: flex;
   align-items: center;
-  margin-block-start: 43px;
   margin-left: 32px;
   width: 329px;
-  height: 21px;
   font-size: 18px;
   line-height: 21px;
 }
 
-.item {
-  display: flex;
-  align-items: center;
+.item-text {
   padding-top: 10px;
   padding-bottom: 9px;
   margin-left: 18px;
   width: 329px;
-  height: 21px;
-  font-size: 18px;
-  line-height: 21px;
   letter-spacing: 0.01em;
   color: #000000;
 }
