--- a/to-do-app/src/components/Home/style.css
+++ b/to-do-app/src/components/Home/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 .main {
   position: relative;
   min-height: 100vh;
@@ -59,4 +61,22 @@
   line-height: 42px;
   letter-spacing: 0.01em;
   color: #FFFFFF;
+}
+
+.delete-button {
+  margin-top: 10px;
+  margin-right: 30px;
+  justify-self: right;
+  width: fit-content;
+  height: 21px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 18px;
+  letter-spacing: 0.01em;
+  color: #FFFFFF;
+  background: transparent;
+  border: none;
+}
+
+button:active {
+  font-weight: 700;
 }
