--- a/to-do-app/src/ToDoApp.css
+++ b/to-do-app/src/ToDoApp.css
@@ -1,28 +1,6 @@
 .Action-Button{
-  height: 53%;
-}
-
-.Action-Input{
-  box-sizing: border-box;
-  border: transparent;
-  outline: none;
-  background: transparent;
-  font-size: calc(10px + 2vmin);
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-}
-
-.Action-Form{
-  width: 100%;
-  height: 100%;
-}
-
-.Active-List{
-  background-color: cadetblue;
+  height: 18px;
+  margin-left: 20px;
 }
 
 .App {
@@ -44,43 +22,6 @@
 
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.List-Item-Button{
-  width: 7%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.List-Item-Container{
-  background-color: #E9F6FC;
-  border-radius: 10px;
-  margin-bottom: 1px;
-  height: 10%;
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-}
-
-.List-View{
-  color: black;
-  height: 100%;
-  width: 100%;
-  overflow: scroll;
-  align-items: center;
-}
-
 .Logo-Container{
   height: 100%;
   display: flex;
@@ -100,61 +41,6 @@
   max-width: 780px;
   border-radius: 12px;
   font-size: calc(15px + 2vmin);
-}
-
-.Title-Bar{
-  min-width: 350px;
-  width: 65vw;
-  max-width: 900px;
-  height: 5.5vh;
-  border-radius: 16px;
-  display: flex;
-  white-space: nowrap;
-  flex-wrap: nowrap;
-  overflow: scroll;
-  align-items: center;
-  margin-bottom: 10px;
-}
-
-.Title-Input{
-  font-size: calc(10px + 2vmin);
-  color: #61dafb;
-  width: calc(180px + 2vmin);
-  box-sizing: border-box;
-  border: transparent;
-  outline: none;
-  background: transparent;
-  text-align: center;
-}
-
-.Title-Tab{
-  background-color: #4c535a;
-  color: #61dafb;
-  height: 100%;
-  border-radius: 10px;
-  margin-right: 10px;
-  padding-right: 9px;
-}
-
-.To-Do-Space{
-  width: 80%;
-  overflow: scroll;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.To-Do-View {
-  background-color: azure;
-  min-width: 350px;
-  max-width: 900px;
-  width: 65vw;
-  height: 58vh;
-  border-radius: 12px;
-  opacity: 0.91;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 ul:hover{
