--- a/to-do-app/src/components/ListItem/style.css
+++ b/to-do-app/src/components/ListItem/style.css
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   margin-left: 32px;
-  width: 329px;
+  width: 684px;
   font-size: 18px;
   line-height: 21px;
 }
@@ -14,4 +14,9 @@
   width: 329px;
   letter-spacing: 0.01em;
   color: #000000;
+}
+
+.item:hover {
+  background-color: #F3F4F9;
+  border-radius: 10px 10px 10px 10px;
 }
