--- a/to-do-app/src/components/ListItem/style.css
+++ b/to-do-app/src/components/ListItem/style.css
@@ -11,7 +11,7 @@
   padding-top: 10px;
   padding-bottom: 9px;
   margin-left: 18px;
-  width: 329px;
+  width: 684px;
   letter-spacing: 0.01em;
   color: #000000;
 }
@@ -19,4 +19,8 @@
 .item:hover {
   background-color: #F3F4F9;
   border-radius: 10px 10px 10px 10px;
+}
+
+.delete-icon {
+  color: #E47B7B;
 }
