Highlight Active List (#5)
* Highlight active list

* Rename entry, unactive, and add tests for different styles

* Fix CI

--- a/to-do-app/src/components/ListTitles/style.css
+++ b/to-do-app/src/components/ListTitles/style.css
@@ -3,7 +3,6 @@
   height: 33px;
   left: 165px;
   top: 353px;
-  font-weight: normal;
   font-size: 28px;
   line-height: 33px;
   letter-spacing: 0.01em;
@@ -36,4 +35,12 @@ li img {
 
 li:active {
   font-weight: 800;
+}
+
+.active-list {
+  font-weight: bold;
+}
+
+.inactive-list {
+  font-weight: normal;
 }
