--- a/to-do-app/src/components/ListItem/style.css
+++ b/to-do-app/src/components/ListItem/style.css
@@ -19,6 +19,10 @@
   background-color: transparent;
 }
 
+.item input[readonly] {
+  cursor: pointer;
+}
+
 .item:hover {
   background-color: #F3F4F9;
   border-radius: 10px 10px 10px 10px;
