--- a/to-do-app/src/components/ListView/style.css
+++ b/to-do-app/src/components/ListView/style.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,100&display=swap');
 
+.active-list-box {
+  display: flex;
+  justify-content: space-between;
+}
+
 .active-list-header {
   margin-top: 46px;
   margin-bottom: 46px;
@@ -19,4 +24,27 @@
   height: 339px;
   top: 399px;
   background: #FFFFFF;
+}
+
+.progress-bar {
+  margin-top: 49px;
+  margin-bottom: 48px;
+  margin-right: 102px;
+  width: 266px;
+  background-color: #757575;
+}
+
+progress {
+  height: 23px;
+  border-radius: 6px;
+}
+
+progress::-webkit-progress-bar {
+  border-radius: 6px;
+}
+
+progress::-webkit-progress-value {
+  border-top-left-radius: 6px;
+  border-bottom-left-radius: 6px;
+  background: #4CAF50;
 }
